--- a/Roles/WWTS.Roles/WWTS.Roles.Modulo/Roles.vbproj
+++ b/Roles/WWTS.Roles/WWTS.Roles.Modulo/Roles.vbproj
@@ -1116,6 +1116,10 @@
       <Project>{288345c5-9fd4-4ac9-a9d1-d42bc9ad3316}</Project>
       <Name>Infoware.Reportes</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\ICA3\Infoware.Updates\Infoware.Updates.csproj">
+      <Project>{ffef18e1-fc15-42c9-88eb-2b24b54d7f73}</Project>
+      <Name>Infoware.Updates</Name>
+    </ProjectReference>
     <ProjectReference Include="..\WWTS.Roles.Controles\WWTS.Roles.Controles.vbproj">
       <Project>{dfc6bf50-6a1f-40df-8db7-a4d56f9bb525}</Project>
       <Name>WWTS.Roles.Controles</Name>
@@ -1577,7 +1581,7 @@
   <Import Project="$(MSBuildBinPath)\Microsoft.VisualBasic.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
-      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+      <ErrorText>Este proyecto hace referencia a los paquetes NuGet que faltan en este equipo. Use la restauración de paquetes NuGet para descargarlos. Para obtener más información, consulte http://go.microsoft.com/fwlink/?LinkID=322105. El archivo que falta es {0}.</ErrorText>
     </PropertyGroup>
     <Error Condition="!Exists('..\..\packages\squirrel.windows.2.0.1\build\squirrel.windows.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\squirrel.windows.2.0.1\build\squirrel.windows.props'))" />
   </Target>
