Modulo Siembra Carga Opciones

--- a/ICA3/ICA3/ICA3.csproj
+++ b/ICA3/ICA3/ICA3.csproj
@@ -70,6 +70,9 @@
   <PropertyGroup>
     <StartupObject>ICA3.Program</StartupObject>
   </PropertyGroup>
+  <PropertyGroup>
+    <NoWin32Manifest>true</NoWin32Manifest>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="DeltaCompressionDotNet, Version=1.1.0.0, Culture=neutral, PublicKeyToken=1d14d6e5194e7f4a, processorArchitecture=MSIL">
       <HintPath>..\packages\DeltaCompressionDotNet.1.1.0\lib\net20\DeltaCompressionDotNet.dll</HintPath>
