Mejorado el mantenimiento de empleados

--- a/ICA3/Infoware.Consola.Base/Infoware.Consola.Base.csproj
+++ b/ICA3/Infoware.Consola.Base/Infoware.Consola.Base.csproj
@@ -245,7 +245,9 @@
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </COMReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Resources\restore.png" />
+  </ItemGroup>
   <ItemGroup>
     <None Include="Resources\docword.png" />
   </ItemGroup>
@@ -323,6 +325,18 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\docexcel.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\close.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\maximize.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\minimize.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\ica3icon.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
