--- a/Siembra/WWTS.Siembra/WWTS.Siembra.Modulo/Siembra.vbproj
+++ b/Siembra/WWTS.Siembra/WWTS.Siembra.Modulo/Siembra.vbproj
@@ -73,10 +73,18 @@
     <ApplicationManifest>My Project\app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="CrystalDecisions.CrystalReports.Engine, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
-    <Reference Include="CrystalDecisions.ReportSource, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
-    <Reference Include="CrystalDecisions.Shared, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
-    <Reference Include="CrystalDecisions.Windows.Forms, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
+    <Reference Include="CrystalDecisions.CrystalReports.Engine">
+      <HintPath>c:\program files (x86)\sap businessobjects\crystal reports for .net framework 4.0\common\sap businessobjects enterprise xi 4.0\win32_x86\dotnet\CrystalDecisions.CrystalReports.Engine.dll</HintPath>
+    </Reference>
+    <Reference Include="CrystalDecisions.ReportSource">
+      <HintPath>c:\program files (x86)\sap businessobjects\crystal reports for .net framework 4.0\common\sap businessobjects enterprise xi 4.0\win32_x86\dotnet\CrystalDecisions.ReportSource.dll</HintPath>
+    </Reference>
+    <Reference Include="CrystalDecisions.Shared">
+      <HintPath>c:\program files (x86)\sap businessobjects\crystal reports for .net framework 4.0\common\sap businessobjects enterprise xi 4.0\win32_x86\dotnet\CrystalDecisions.Shared.dll</HintPath>
+    </Reference>
+    <Reference Include="CrystalDecisions.Windows.Forms">
+      <HintPath>c:\program files (x86)\sap businessobjects\crystal reports for .net framework 4.0\common\sap businessobjects enterprise xi 4.0\win32_x86\dotnet\CrystalDecisions.Windows.Forms.dll</HintPath>
+    </Reference>
     <Reference Include="DeltaCompressionDotNet, Version=1.1.0.0, Culture=neutral, PublicKeyToken=1d14d6e5194e7f4a, processorArchitecture=MSIL">
       <HintPath>..\..\packages\DeltaCompressionDotNet.1.1.0\lib\net20\DeltaCompressionDotNet.dll</HintPath>
     </Reference>
@@ -153,6 +161,12 @@
       <DependentUpon>CtlBuscaCajasRezago.vb</DependentUpon>
     </Compile>
     <Compile Include="Busquedas\CtlBuscaCajasRezago.vb">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Busquedas\CtlBuscaTarjetaCuracion.Designer.vb">
+      <DependentUpon>CtlBuscaTarjetaCuracion.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Busquedas\CtlBuscaTarjetaCuracion.vb">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="Busquedas\CtlBuscaTarjetaEnsZaf.Designer.vb">
@@ -325,6 +339,12 @@
     <Compile Include="Modulos\FrmConfiguracion.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Modulos\FrmCuracion.Designer.vb">
+      <DependentUpon>FrmCuracion.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Modulos\FrmCuracion.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Modulos\FrmEnsarteZafadura.Designer.vb">
       <DependentUpon>FrmEnsarteZafadura.vb</DependentUpon>
     </Compile>
@@ -438,6 +458,12 @@
     <Compile Include="SubModulos\CtlListaEmbarque.vb">
       <SubType>UserControl</SubType>
     </Compile>
+    <Compile Include="SubModulos\CtlTarjCuracion.Designer.vb">
+      <DependentUpon>CtlTarjCuracion.vb</DependentUpon>
+    </Compile>
+    <Compile Include="SubModulos\CtlTarjCuracion.vb">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Include="SubModulos\CtlTarjEnsarte.Designer.vb">
       <DependentUpon>CtlTarjEnsarte.vb</DependentUpon>
     </Compile>
@@ -457,6 +483,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Busquedas\CtlBuscaCajasRezago.resx">
       <DependentUpon>CtlBuscaCajasRezago.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Busquedas\CtlBuscaTarjetaCuracion.resx">
+      <DependentUpon>CtlBuscaTarjetaCuracion.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Busquedas\CtlBuscaTarjetaEnsZaf.resx">
       <DependentUpon>CtlBuscaTarjetaEnsZaf.vb</DependentUpon>
@@ -531,6 +560,9 @@
     <EmbeddedResource Include="Modulos\FrmConfiguracion.resx">
       <DependentUpon>FrmConfiguracion.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Modulos\FrmCuracion.resx">
+      <DependentUpon>FrmCuracion.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Modulos\FrmEnsarteZafadura.resx">
       <DependentUpon>FrmEnsarteZafadura.vb</DependentUpon>
     </EmbeddedResource>
@@ -575,6 +607,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="SubModulos\CtlListaEmbarque.resx">
       <DependentUpon>CtlListaEmbarque.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SubModulos\CtlTarjCuracion.resx">
+      <DependentUpon>CtlTarjCuracion.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="SubModulos\CtlTarjEnsarte.resx">
       <DependentUpon>CtlTarjEnsarte.vb</DependentUpon>
