--- a/Siembra/WWTS.Siembra/WWTS.Siembra.Reglas/WWTS.Siembra.Reglas.vbproj
+++ b/Siembra/WWTS.Siembra/WWTS.Siembra.Reglas/WWTS.Siembra.Reglas.vbproj
@@ -50,13 +50,13 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Infoware.Datos">
-      <HintPath>..\..\Infoware.Datos\bin\Debug\Infoware.Datos.dll</HintPath>
+      <HintPath>..\..\..\ICA3\Infoware.Datos\bin\Debug\Infoware.Datos.dll</HintPath>
     </Reference>
     <Reference Include="Infoware.Reglas">
-      <HintPath>..\..\Infoware.Reglas\bin\Debug\Infoware.Reglas.dll</HintPath>
+      <HintPath>..\..\..\ICA3\Infoware.Reglas\bin\Debug\Infoware.Reglas.dll</HintPath>
     </Reference>
     <Reference Include="Infoware.Reglas.General">
-      <HintPath>..\..\Infoware.Reglas.General\bin\Debug\Infoware.Reglas.General.dll</HintPath>
+      <HintPath>..\..\..\ICA3\Infoware.Reglas.General\bin\Debug\Infoware.Reglas.General.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Office.Interop.Excel, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Microsoft.Office.Interop.Excel.15.0.4795.1000\lib\net20\Microsoft.Office.Interop.Excel.dll</HintPath>
@@ -89,8 +89,12 @@
     <Compile Include="Database\ConfigSiembra.vb" />
     <Compile Include="Database\Corte.vb" />
     <Compile Include="Database\Cuarto.vb" />
+    <Compile Include="Database\HumedadRelativa.vb" />
+    <Compile Include="Database\CuracionCortes.vb" />
+    <Compile Include="Database\CuracionDetalle.vb" />
     <Compile Include="Database\Destino.vb" />
     <Compile Include="Database\Embarque.vb" />
+    <Compile Include="Database\Curacion.vb" />
     <Compile Include="Database\EnsarteZafadura.vb" />
     <Compile Include="Database\Hacienda.vb" />
     <Compile Include="Database\Horno.vb" />
@@ -102,6 +106,7 @@
     <Compile Include="Database\Terreno.vb" />
     <Compile Include="Database\ZafraSiembra.vb" />
     <Compile Include="Excel\BloqueReporte.vb" />
+    <Compile Include="Excel\CuracionReporte.vb" />
     <Compile Include="Excel\EnsarteZafaduraReporte.vb" />
     <Compile Include="Excel\InvCajaReporte.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
@@ -128,8 +133,12 @@
     <Compile Include="Reglas\ConfigSiembra.vb" />
     <Compile Include="Reglas\Corte.vb" />
     <Compile Include="Reglas\Cuarto.vb" />
+    <Compile Include="Reglas\HumedadRelativa.vb" />
+    <Compile Include="Reglas\CuracionCortes.vb" />
+    <Compile Include="Reglas\CuracionDetalle.vb" />
     <Compile Include="Reglas\Destino.vb" />
     <Compile Include="Reglas\Embarque.vb" />
+    <Compile Include="Reglas\Curacion.vb" />
     <Compile Include="Reglas\EnsarteZafadura.vb" />
     <Compile Include="Reglas\Hacienda.vb" />
     <Compile Include="Reglas\Horno.vb" />
@@ -168,6 +177,10 @@
     <ProjectReference Include="..\..\..\General\WWTS.General\WWTS.General.Reglas\WWTS.General.Reglas.vbproj">
       <Project>{6f7c7749-44bd-42c0-9ef8-cacf87184cdf}</Project>
       <Name>WWTS.General.Reglas</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\ICA3\Infoware.Reportes\Infoware.Reportes.vbproj">
+      <Project>{288345c5-9fd4-4ac9-a9d1-d42bc9ad3316}</Project>
+      <Name>Infoware.Reportes</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
