--- a/Roles/WWTS.Roles/WWTS.Roles.Modulo/Roles.vbproj
+++ b/Roles/WWTS.Roles/WWTS.Roles.Modulo/Roles.vbproj
@@ -76,6 +76,9 @@
   <PropertyGroup>
     <ApplicationIcon>Resources\rolesicon.ico</ApplicationIcon>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationManifest>My Project\app.manifest</ApplicationManifest>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="CrystalDecisions.CrystalReports.Engine, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
     <Reference Include="CrystalDecisions.ReportSource, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
