Reporte Tarjeta Curacion

--- a/FichasMedicas/WWTS.FichasMedicas/WWTS.FichasMedicas.Controles/WWTS.FichasMedicas.Controles.vbproj
+++ b/FichasMedicas/WWTS.FichasMedicas/WWTS.FichasMedicas.Controles/WWTS.FichasMedicas.Controles.vbproj
@@ -412,5 +412,8 @@
   <ItemGroup>
     <None Include="Resources\print.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\copy.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
 </Project>
