--- a/Roles/WWTS.Roles/WWTS.Roles.Modulo/app.config
+++ b/Roles/WWTS.Roles/WWTS.Roles.Modulo/app.config
@@ -1,5 +1,11 @@
 <?xml version="1.0"?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="Roles.My.MySettings.domus2amecaConnectionString" connectionString="Data Source=rogamd;Initial Catalog=domus2ameca;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <system.diagnostics>
         <sources>
             <!-- This section defines the logging configuration for My.Application.Log -->
