--- a/Siembra/WWTS.Siembra/WWTS.Siembra.Modulo/App.config
+++ b/Siembra/WWTS.Siembra/WWTS.Siembra.Modulo/App.config
@@ -1,5 +1,12 @@
 <?xml version="1.0"?>
 <configuration>
+    <configSections>
+    </configSections>
+    <connectionStrings>
+        <add name="Siembra.My.MySettings.domus2amecaConnectionString"
+            connectionString="Data Source=rogamd;Initial Catalog=domus2ameca;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+    </connectionStrings>
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
     </startup>
