--- a/Roles/WWTS.Roles/WWTS.Roles.Modulo/Roles.vbproj
+++ b/Roles/WWTS.Roles/WWTS.Roles.Modulo/Roles.vbproj
@@ -197,6 +197,12 @@
     <Compile Include="Mantenimientos\ComboBoxLoteLiquidacion.vb">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Mantenimientos\FrmCambiarAreaLote.Designer.vb">
+      <DependentUpon>FrmCambiarAreaLote.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Mantenimientos\FrmCambiarAreaLote.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Mantenimientos\FrmCambiarLote.Designer.vb">
       <DependentUpon>FrmCambiarLote.vb</DependentUpon>
     </Compile>
@@ -737,6 +743,9 @@
     <EmbeddedResource Include="FrmMantenimientoUsuario.resx">
       <DependentUpon>FrmMantenimientoUsuario.vb</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Mantenimientos\FrmCambiarAreaLote.resx">
+      <DependentUpon>FrmCambiarAreaLote.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Mantenimientos\FrmCambiarLote.resx">
       <DependentUpon>FrmCambiarLote.vb</DependentUpon>
